Mon Nov 17 13:11:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/PortableInterceptors/PICurrent_NameService:
          Now really deleted this one

Mon Nov 17 12:49:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Buffered_AMI/run_test.pl
        * examples/OBV/Typed_Events/run_test.pl
        * examples/Simple/bank/run_test.pl
        * examples/Simple/echo/run_test.pl
        * examples/Simple/grid/run_test.pl
        * examples/Simple/time/run_test.pl
        * examples/TypeCode_Creation/run_test.pl
          Converted to the new test framework

Mon Nov 17 12:07:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3481_Regression/run_test.pl:
          No hardcoded timeout should be used

Mon Nov 17 11:52:38 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/Security/Secure_Invocation/client.conf:
        * orbsvcs/tests/Security/Secure_Invocation/client.cpp:
        * orbsvcs/tests/Security/Secure_Invocation/client_nopasswd.conf:
        * orbsvcs/tests/Security/Secure_Invocation/server.conf:
        * orbsvcs/tests/Security/Secure_Invocation/server.cpp:
        * orbsvcs/tests/Security/Secure_Invocation/server_none.conf:
        * orbsvcs/tests/Security/Secure_Invocation/server_nopasswd.conf:

          In common with all our other SSL tests this test specifies the CA
          certificate by means of an environment value. This means that we have
          no coverage for the service configurator directive arguments
          -SSLCAfile and -SSLCApath. This one test has now been modified to use
          the former argument. This will expose a regression and also probably
          errors in the wide character support revision 83118 to
          TAO/orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp.

Mon Nov 17 12:01:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/PortableInterceptors/PICurrent_NameService: