@@ -6,37 +6,17 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
-$status = 0;
-$file = PerlACE::LocalFile ("test.ior");
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
 
-unlink $file;
+$SV = $server->CreateProcess ("Collocated_Test", "-ORBObjRefStyle url");
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("Collocated_Test", "-ORBObjRefStyle url");
-}
-else {
-    $SV = new PerlACE::Process ("Collocated_Test", "-ORBObjRefStyle url");
-}
+$test = $SV->SpawnWaitKill ($server->ProcessStartWaitInterval());
 
-print STDERR "\n\n==== Running interceptor collocated Dynamic test\n";
-
-$SV->Spawn ();
-
-if (PerlACE::waitforfile_timed ($file, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$file>\n";
-    $SV->Kill ();
+if ($test != 0) {
+    print STDERR "ERROR: test returned $test\n";
     exit 1;
 }
 
-$collocated = $SV->WaitKill (5);
-
-if ($collocated != 0) {
-    print STDERR "ERROR: Collocated_Test returned $collocated\n";
-    $status = 1;
-}
-
-unlink $file;
-
-exit $status;
+exit 0;
